--- a/muck-study-spark/pom.xml
+++ b/muck-study-spark/pom.xml
@@ -258,12 +258,26 @@
 			<artifactId>spark-core_2.10</artifactId>
 			<version>1.0.2</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql_2.10 -->
+		<dependency>
+		    <groupId>org.apache.spark</groupId>
+		    <artifactId>spark-sql_2.10</artifactId>
+		    <version>1.0.2</version>
+		</dependency>
 		<dependency>
 		<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
 			<version>2.2.0</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${druid.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
 	</dependencies>
 </project>
